tests/fail/elaboration/fun-app/unbound-head-2.snap
stdout = ''
stderr = '''
error: cannot find `f` in scope
  ┌─ tests/fail/elaboration/fun-app/unbound-head-2.fathom:3:1
  │
3 │ f x y
  │ ^ unbound name

'''
